# xdccget-for-windows

./: CMakeLists.txt  Makefile  Makefile.common  README.md  argument_parser.c  argument_parser.h  config.c  file.c  file.h  getopt.c  getopt.h  hashing_algo.c  helper.c  helper.h  os_specific.h  os_unix.c  os_windows.c  sds.c  sds.h  xdccget  xdccget.c
libircclient-include/: libirc_errors.h  libirc_events.h  libircclient.h  strings_utils.h
libircclient-src/: colors.c  commands.c  dcc.c  dcc.h  errors.c  fd_watcher.c  irc_line_parser.c  irc_parser.c  libircclient.c  params.h  portable.c  portable_endian.h  sockets.c  ssl.c  utils.c
